--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -12,14 +12,15 @@
 </head>
 <body>
     <div class="chat-box">
-        <h1>Chat with RoBERTa</h1>
+        <h1>Input your assessment question</h1>
         <form method="POST" action="/chat">
-            <textarea name="user_input" placeholder="Type your message here..."></textarea><br>
+            <textarea name="user_input" placeholder="Type your question here..."></textarea><br>
             <button type="submit">Send</button>
         </form>
-        {% if response %}
+        {% if question and response %}
         <div class="response">
-            <strong>AI:</strong> {{ response }}
+            <p><strong>Inputted question:</strong> {{ question }}</p> 
+            <p><strong>Bloom Level:</strong> {{ response }}</p>
         </div>
         {% endif %}
     </div>
